# Money-Fronts

./: .gitignore
money-fronts/: .gitignore  README.md
money-fronts/.github/workflows/: release.yml
money-fronts/backend/: build_sidecar.py  requirements-v2.txt  requirements.txt
money-fronts/backend/alembic/: env.py
money-fronts/backend/alembic/versions/: 0001_initial_schema.py  45c3ed957457_adicionando_tabela_de_contas.py  adbb2926c50e_descrição_da_mudança.py
money-fronts/backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  seed.py
money-fronts/backend/app/routers/: __init__.py  accounts.py  budgets.py  categories.py  dashboard.py  recurring.py  transactions.py
money-fronts/docs/: BUILD.md
money-fronts/frontend/: index.html  package-lock.json  package.json  vite.config.js
money-fronts/frontend/src/: api.js  main.js
money-fronts/frontend/src/components/: Accounts.js  Categories.js  Dashboard.js  Recurring.js  Transactions.js
money-fronts/frontend/src/styles/: main.css
money-fronts/src-tauri/: Cargo.toml  tauri.conf.json
money-fronts/src-tauri/capabilities/: default.json
money-fronts/src-tauri/icons/: icon.icns
money-fronts/src-tauri/src/: lib.rs  main.rs
