[package]
name = "money-fronts"
version = "0.1.0"
description = "Orquestrador Tauri v2 (Sidecar Pattern) para o Money Fronts"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["net"] }
log = "0.4.33"

[lib]
name = "money_fronts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
